updated background, text, and images, INITIAL

--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
-<!DOCTYPE html>
-<html>
+  <!DOCTYPE html>
+  <html>
+  
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>Sydney Wrenwick Portfolio</title>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
-</head>
+      <link 
+        rel="stylesheet" 
+        href="./css/styles.css"
+        >
+  </head>
+  
+  <body>
+      <div>
+          <h1>Sydney Wrenwick</h1>
+  
+        <hr>
 
-<body>
-    <H1>
-        My Portfolio
-    </H1>
+          <h2>Software Developer</h2>
+  
+          <img 
+            src="./images/MultipleTerminals.webp"
+            alt="shutterstock stock photo of multiple coding terminals"
+            width="480em" height="269em">
+        
+          <p>I am <b>READY</b> for this!</p>
+
+        <hr>
+  
+          <h3>My Projects</h3>
+          <p><em>Coming Soon</em></p>
+  
+        <hr>
+
+          <h3>About Me</h3>
+          <p>I'm baby kickstarter ethical butcher jean shorts truffaut beard irony etsy kitsch echo park. Direct trade
+              scenester VHS chillwave kinfolk cred succulents, hexagon forage salvia. Blog mumblecore poke pug keytar
+              vegan godard gentrify iPhone listicle flexitarian. Freegan everyday carry YOLO single-origin coffee.
+              Keffiyeh 3 wolf moon celiac post-ironic chia chillwave.
+  
+              Locavore 8-bit shoreditch drinking vinegar portland plaid woke sartorial yr PBR&B pour-over semiotics DIY.
+              Paleo brooklyn mumblecore skateboard shabby chic normcore, keffiyeh schlitz lyft tumblr deep v yuccie direct
+              trade 90's leggings. Affogato beard fam narwhal, pinterest franzen mlkshk ramps palo santo. Art party copper
+              mug shaman keytar.
+  
+              Tumblr chambray kinfolk, waistcoat salvia cornhole iceland taxidermy cray portland. La croix shabby chic
+              tofu intelligentsia, shaman salvia umami migas. YOLO fingerstache fam, ethical kale chips yr godard tote bag
+              green juice heirloom lo-fi messenger bag seitan crucifix tacos. Kitsch dreamcatcher cardigan aesthetic,
+              hashtag raw denim polaroid paleo edison bulb church-key chartreuse plaid shoreditch godard. Asymmetrical tbh
+              synth, godard ennui selfies letterpress taiyaki fixie lo-fi tofu locavore. Pickled narwhal pitchfork austin.
+              Vinyl post-ironic organic vice, pop-up everyday carry austin tacos poutine kickstarter enamel pin tousled
+              PBR&B hashtag.
+          </p>
+  
+        <hr>
+
+          <h3>Contact Me</h3>
+          <p>Email: sy.wren@gmail.com</p>
+          <P>Phone: YOU.THO.UGHT</P>
+      </div>
+
+    <center>
+      <div style="width:480px">
+        <iframe allow="fullscreen" frameBorder="0" height="269" 
+          src="https://giphy.com/embed/7QknIe3dS25QSVVRiT/video" width="480">
+        </iframe>
+      </div>
+    </center>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
