addition of primitive navbar and css styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   </head>
   
   <body>
+      <div class ="navbar">
+        <nav>
+          <ul>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#my-projects">My Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+
       <div>
           <h1>Sydney Wrenwick</h1>
   
@@ -26,14 +36,18 @@
             width="480em" height="269em">
         
           <p>I am <b>READY</b> for this!</p>
+      </div>
 
         <hr>
-  
+
+      <div id="my-projects">
           <h3>My Projects</h3>
           <p><em>Coming Soon</em></p>
-  
+      </div>
+        
         <hr>
 
+      <div id="about-me">
           <h3>About Me</h3>
           <p>I'm baby kickstarter ethical butcher jean shorts truffaut beard irony etsy kitsch echo park. Direct trade
               scenester VHS chillwave kinfolk cred succulents, hexagon forage salvia. Blog mumblecore poke pug keytar
@@ -53,9 +67,11 @@
               Vinyl post-ironic organic vice, pop-up everyday carry austin tacos poutine kickstarter enamel pin tousled
               PBR&B hashtag.
           </p>
-  
+      </div>
+
         <hr>
 
+      <div id="contact">
           <h3>Contact Me</h3>
           <p>Email: sy.wren@gmail.com</p>
           <P>Phone: YOU.THO.UGHT</P>
